HTMLMediaElement: set `muted_` when cloning element with muted attribute.

This CL works around the fact that cloning does not call the parser
callbacks and the HTML specifications require the attribute to only
have an effect when the element was created. There is unfortunately
no notification that the element creation from `cloneNode()` happens
so we instead rely on a callback meant for something slightly different.

Bug: 811743
Change-Id: Ib7ac55088b9eaad23f9bce0cfc8366fec6fc5b0d
Reviewed-on: https://chromium-review.googlesource.com/937504
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Reviewed-by: Philip Jägenstedt <foolip@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539207}
Former-commit-id: 0d23cbfab31479d700140aa5d26d70d857f7be48